[package]
name = "pygeohash-fast"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pygeohash_fast"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.16.5", features = ["extension-module", "abi3-py37"] }
rayon = "^1.5"
geohash = "^0.12.0"
num_cpus = "^1.13"
